2009-07-14  Donal K. Fellows  <dkf@users.sf.net>

	* doc/canvas.n (WINDOW ITEMS): [Bug 2326602]: Corrected definition of
	the -height and -width options for these items.

	* unix/configure.in: [Bug 2496018]: Allow the disabling of the use of
	XScreenSaver at configuration time, so as to permit better control of
	dependencies in the embedded case.

2009-07-11  Donal K. Fellows  <dkf@users.sf.net>

	* doc/grid.n: [Bug 2818455]: Corrected example.

2009-06-27  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls (Tk(Orient|Smooth)(Parse|Print)Proc):
	Backport [Bug 2804935]: Expose these functions through
	the internal stub table as they are useful to existing third-party code.

2009-06-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanvUtil.c: [Bug 220935]: canvas dash update problem

2009-06-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinWm.c:   [Bug 2799589]: Backported fix for crash on
	* tests/winWm.test: delayed window activation.

2009-05-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinMenu.c: [Bug 2794778]: Backported fix for keyboard
	traversal of the menus on Windows.

2009-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkButton.c: [Bug 1923684]: Backported checkbutton fix
	for confused state when -offvalue equals -tristatevalue

2009-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/ttk_image.n:  Backported support for the Vista theme.
	* doc/ttk_style.n:  This requires the vsapi element engine,
	* doc/ttk_vsapi.n:  the hover state and the theme script
	* doc/ttk_widget.n: definition.
	* generic/ttk/ttkState.c:
	* generic/ttk/ttkTheme.h:
	* generic/ttk/ttkWidget.c:
	* library/ttk/ttk.tcl:
	* library/ttk/vistaTheme.tcl:
	* library/ttk/xpTheme.tcl:
	* tests/ttk/vsapi.test:
	* win/ttkWinXPTheme.c:

2009-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkFont.c: [Bug 2791352]: Backported fix and tests for
	* tests/font.test:  mis-parsing of certain font descriptions.
